# spotify-stats-ms

./: .gitignore  docker-compose.yml  requirements.txt  setup.cfg
py/: .gitignore  .pre-commit-config.yaml  Dockerfile.poetry
py/lib/database/: base.py
py/lib/util/: __init__.py
py/projects/auth/: Dockerfile  pyproject.toml
py/projects/auth/auth/: __init__.py  app.py  no_cache_handler.py
py/projects/import/: Dockerfile  pyproject.toml
py/projects/import/import/: app.py  play.py
src/spotifystats/auth/: __init__.py  app.py  no_cache_handler.py
src/spotifystats/core/util/: __init__.py  check_env.py
src/spotifystats/import/: play.py
src/spotifystats/importer/models/: base.py
