[metadata]
name = spotifystats
version = 0.1.0
license = GPL-3.0-only
author = Bernardo Jordão
author_email = bernardo.jordao@tecnico.ulisboa.pt
long_description = file: README.md

classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

project_urls =
    Source = https://github.com/itsbekas/spotify-stats-ms

[options]
python_requires = >=3.10
package_dir=
    =src

[options.packages.find]
where=src
